build/cd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-upload
  namespace: devops
  labels:
    app: file-upload
spec:
  replicas: 3
  selector:
    matchLabels:
      app: file-upload
  template:
    metadata:
      labels:
        app: file-upload
    spec:
      containers:
        - name: file-upload
          image: tae2089/file-upload:1
          ports:
            - containerPort: 8080
