build/cd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-test-server-service
  namespace: devops
spec:
  selector:
    app: devops-test-server
  ports:
    - protocol: TCP
      port: 8080
